--- a/EntityWPFChat/MainWindow.xaml
+++ b/EntityWPFChat/MainWindow.xaml
@@ -49,7 +49,7 @@
 
 
         <!--<Label BorderBrush="Snow" BorderThickness="1" Grid.Row="1">Select User:</Label>-->
-        <DataGrid HorizontalScrollBarVisibility="Disabled" IsReadOnly="True" HeadersVisibility="None" Name="UsersFrom" Grid.Row="1" Grid.RowSpan="2" ItemsSource="{Binding Path=People}" BorderBrush="Snow" BorderThickness="1"></DataGrid>
+        <DataGrid Padding="5" HorizontalScrollBarVisibility="Disabled" IsReadOnly="True" HeadersVisibility="None" Name="UsersFrom" Grid.Row="1" Grid.RowSpan="2" ItemsSource="{Binding Path=People}" BorderBrush="Snow" BorderThickness="1"></DataGrid>
         <!--<DataGrid Name="UsersTo" Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" ItemsSource="{Binding Path=People}" BorderBrush="Snow" BorderThickness="1"></DataGrid>-->
 
         <ListView Name="ListViewMessages" Grid.RowSpan="3" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="5" BorderBrush="Snow" BorderThickness="1">
@@ -208,7 +208,7 @@
                     <ColumnDefinition Width="160"/>
                     <ColumnDefinition Width="1*"/>
                     <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="170"/>
                     <ColumnDefinition Width="150"/>
                 </Grid.ColumnDefinitions>
 
@@ -218,8 +218,8 @@
                 <Label Margin="5,-15,0,0" Grid.Row="1" Grid.ColumnSpan="2" Grid.Column="1" FontSize="12" HorizontalAlignment="Left" VerticalAlignment="Top">*If preview does not apper, link is invalid</Label>
                 <Button Name="ButtonAttach" Click="ButtonAttach_Click" Margin="5" Grid.Column="4" Grid.Row="0">Attach</Button>
                 <Button Name="ButtonAttachCencel" Click="ButtonAttachCencel_Click" Margin="5" Grid.Column="4" Grid.Row="1">Cencel</Button>
-                <Label Grid.Row="2" FontSize="15" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Center">Select background color: </Label>
-                <cpvls:ColorPicker Width="140" Height="35" Grid.Column="3" Grid.Row="1"></cpvls:ColorPicker>
+                <Label Grid.Row="2" FontSize="15" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center">Select background color: </Label>
+                <cpvls:ColorPicker Name="ColorPicker" Width="140" Height="35" Grid.Column="3" Grid.Row="1"></cpvls:ColorPicker>
                 
                  
                 
