--- a/EntityWPFChat/MainWindow.xaml
+++ b/EntityWPFChat/MainWindow.xaml
@@ -23,6 +23,14 @@
 
     <Grid>
 
+        <!--<Grid.Resources>
+            <Style TargetType="ListViewItem">
+              
+                
+            </Style>
+            
+        </Grid.Resources>-->
+
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="180"/>
             <ColumnDefinition Width="1*"/>
@@ -50,8 +58,10 @@
 
 
         <!--<Label BorderBrush="Snow" BorderThickness="1" Grid.Row="1">Select User:</Label>-->
-            <DataGrid SelectionChanged="UsersFrom_SelectionChanged" Background="Transparent" Padding="5" HorizontalScrollBarVisibility="Disabled" IsReadOnly="True" HeadersVisibility="None" Name="UsersFrom" Grid.Row="1" Grid.RowSpan="2" ItemsSource="{Binding Path=People}" BorderBrush="Snow" BorderThickness="1">
+        <DataGrid Opacity="0.8" SelectionChanged="UsersFrom_SelectionChanged" Background="Transparent" Padding="5" HorizontalScrollBarVisibility="Disabled" IsReadOnly="True" HeadersVisibility="None" Name="UsersFrom" Grid.Row="1" Grid.RowSpan="2" ItemsSource="{Binding Path=People}" BorderBrush="Snow" BorderThickness="1">
 
+            
+            
             <DataGrid.RowDetailsTemplate>
                 <DataTemplate>
                     <Controls:Badged Name="BadgedMessageCounter" HorizontalAlignment="Center" Width="140" Margin="-13"  Badge="{Binding Path=MessageCount}" BadgePlacementMode="TopRight">
@@ -65,7 +75,7 @@
 
         <ScrollViewer Background="Transparent" Name="Scroll" Grid.RowSpan="3" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="5" BorderBrush="Snow" BorderThickness="1">
 
-            <ListView SelectionChanged="ListViewMessages_SelectionChanged" Background="Transparent" Name="ListViewMessages" BorderBrush="Snow" BorderThickness="1" >
+            <ListView SelectionChanged="ListViewMessages_SelectionChanged" Background="Transparent" Foreground="Transparent" Name="ListViewMessages" BorderBrush="Snow" BorderThickness="1" >
 
                 <!--<ListView.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -88,6 +98,7 @@
                                             </MultiBinding>
                                         </Setter.Value>
                                     </Setter>
+                                    <!--<Setter Property="Background" Value="Transparent"></Setter>-->
                                 </Style>
                             </Border.Style>
                             <StackPanel>
@@ -102,7 +113,7 @@
 
             </ListView>
         </ScrollViewer>
-        
+
         <!--<Image Margin="50" Grid.RowSpan="10" Grid.ColumnSpan="10" Name="ImageBackgroud" Source="https://vignette.wikia.nocookie.net/surrealmemes/images/1/17/Flawless_picardia_by_epycwyn-dbkbyfq.png/revision/latest?cb=20180418235839"></Image>-->
 
         <TextBox Name="TextBoxMain" TextWrapping="Wrap" Grid.Row="4" Grid.ColumnSpan="5" FontSize="15" Controls:TextBoxHelper.WatermarkWrapping="WrapWithOverflow"></TextBox>
@@ -126,7 +137,7 @@
 
         <!--Width="{Binding ElementName=FatherWin, Path=Width}" Height="{Binding ElementName=FatherWin, Path=Height}"-->
 
-        <Controls:Flyout Name="FlyOutRemove" MouseLeave="FlyOutStyle_MouseLeave" Header="Delete account" Grid.Row="0" Grid.Column="0" Position="Left" Width="220" Grid.RowSpan="5" Grid.ColumnSpan="3">
+        <Controls:Flyout Opacity="0.95" Name="FlyOutRemove" MouseLeave="FlyOutStyle_MouseLeave" Header="Delete account" Grid.Row="0" Grid.Column="0" Position="Left" Width="220" Grid.RowSpan="5" Grid.ColumnSpan="3">
             <StackPanel>
 
                 <Label FontSize="9" Margin="0,-25,60,5" HorizontalAlignment="Right">and cleanup usage data</Label>
@@ -137,7 +148,7 @@
 
             </StackPanel>
         </Controls:Flyout>
-        <Controls:Flyout CloseButtonVisibility="Collapsed" Name="FlyOutAttach" Grid.Row="0" Grid.Column="0" Position="Bottom" Height="100" Grid.RowSpan="5" Grid.ColumnSpan="6">
+        <Controls:Flyout Opacity="0.95" CloseButtonVisibility="Collapsed" Name="FlyOutAttach" Grid.Row="0" Grid.Column="0" Position="Bottom" Height="100" Grid.RowSpan="5" Grid.ColumnSpan="6">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -211,33 +222,45 @@
 
 
         </Controls:Flyout>
-        <Controls:Flyout Height="200" Name="FlyOutStyle" MouseLeave="FlyOutStyle_MouseLeave" Header="Settings" Grid.Row="0" Grid.Column="0" Position="Top" Grid.RowSpan="5" Grid.ColumnSpan="6">
+        <Controls:Flyout Opacity="0.95" Height="200" Name="FlyOutStyle" MouseLeave="FlyOutStyle_MouseLeave" Header="Settings" Grid.Row="0" Grid.Column="0" Position="Top" Grid.RowSpan="5" Grid.ColumnSpan="6">
             <Grid>
 
                 <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition Height="60"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="210"/>
                     <ColumnDefinition Width="140"/>
                     <ColumnDefinition Width="140"/>
                     <ColumnDefinition Width="140"/>
                     <ColumnDefinition Width="140"/>
                 </Grid.ColumnDefinitions>
 
-                <Label HorizontalAlignment="Right" Margin="0,15,0,15" Grid.Column="1" VerticalAlignment="Center" FontSize="20" Height="37" Width="124">Accent color:</Label>
-                <ComboBox Margin="15" Grid.Row="0" Grid.Column="2" Name="DropDownAccents" SelectedIndex="8" SelectionChanged="DropDownAccents_SelectionChanged" />
+                <Label HorizontalAlignment="Right" Margin="0,10,0,12" Grid.Column="2" VerticalAlignment="Center" FontSize="20" Height="38" Width="124">Accent color:</Label>
+                <ComboBox Margin="15" Grid.Row="0" Grid.Column="3" Name="DropDownAccents" SelectedIndex="8" SelectionChanged="DropDownAccents_SelectionChanged" />
 
-                <Label HorizontalAlignment="Right" Grid.Column="3" Margin="0,15,0,15" VerticalAlignment="Center" FontSize="20" Height="37" Width="135">Color scheme:</Label>
-                <Controls:ToggleSwitch Name="ThemeSwitch" Grid.Column="4" Click="ToggleSwitch_Click" Margin="15" OnLabel="White" OffLabel="Dark" />
+                <Label HorizontalAlignment="Right" Grid.Column="4" Margin="0,10,0,12" VerticalAlignment="Center" FontSize="20" Height="38" Width="135">Color scheme:</Label>
+                <Controls:ToggleSwitch Name="ThemeSwitch" Grid.Column="5" Click="ToggleSwitch_Click" Margin="15" OnLabel="White" OffLabel="Dark" />
+
+
+                <Label Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="4" Margin="0,-15,0,0" FontSize="15" VerticalAlignment="Top" HorizontalAlignment="Left">*Remember to get your commands with "!" on the begin, and also use lovercase</Label>
+                <Label Grid.Column="1" Margin="0,15,0,0" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Left">!</Label>
+                <ListView Margin="20" Grid.Column="1" Grid.RowSpan="3" Background="Transparent" Padding="5" Name="DataGridCommandsInfo"/>
+
 
             </Grid>
+                
         </Controls:Flyout>
 
         <Controls:ProgressRing Name="ProgressRingLoading" IsActive="False" Grid.RowSpan="6" Grid.ColumnSpan="6"/>
+
+        <Grid.Background>
+            <ImageBrush ImageSource="https://www.pixel-creation.com/wp-content/uploads/dragon-full-hd-wallpaper-and-background-image-1920x1080-id441572-1.jpg"/>
+        </Grid.Background>
 
     </Grid>
 </Controls:MetroWindow>
